# Copyright 2020 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style license that can be found
# in the LICENSE file of the main Hafnium repository or at
# https://opensource.org/licenses/BSD-3-Clause.

config("libfdt_config") {
  visibility = [ ":gtest" ]
  include_dirs = [
    "libfdt",
    "hafnium_inc",
  ]
  cflags = [
    "-Wno-zero-length-array",
    "-Wno-extra-semi",
    "-Wno-sign-compare",
  ]
}

source_set("libfdt") {
  sources = [
    "libfdt/fdt.c",
    "libfdt/fdt_addresses.c",
    "libfdt/fdt_ro.c",
    "libfdt/fdt_rw.c",
    "libfdt/fdt_wip.c",
  ]

  # Add config to targets which directly depend on this one, not recursively.
  public_configs = [ ":libfdt_config" ]
}
